--- a/app/css/app.css
+++ b/app/css/app.css
@@ -26,14 +26,14 @@
 }
 
 /* Simple styling examples for header/footer */
-.header {
+/* .header {
     height: 56px;
     display: flex;
     flex-direction: row;
     align-items: center;
     gap: 16px;
     padding: 0px var(--main-padding);
-}
+} */
 
 .header a {
     color: var(--accent1);
